--- a/projetos/cronometro/index.html
+++ b/projetos/cronometro/index.html
@@ -7,16 +7,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 id="h1">Cronômetro</h1>
+    
 
     <div id="container">
+        <h1 id="h1">Cronômetro</h1>
         <div id="display">00:00:00:00</div>
-        <div id="controles">
-            <button id="iniciar_btn" onclick="inicar()">Iniciar</button>
+        <div id="controles" class="controles">
+            <button id="iniciar_btn" onclick="iniciar()">Iniciar</button>
             <button id="pausar_btn" onclick="pausar()">Pausar</button>
             <button id="reiniciar_btn" onclick="reiniciar()">Reiniciar</button>
         </div>
+        <div class="controles">
+            <button id="checkpoint_btn" onclick="checkpoint()">Checkpoint</button>
+            <button id="resetCheckpoint_btn" onclick="resetCheckpoint()">Reset Check </button>
+        </div>
+        <div id="checkpointTempos">
+            <ul id="displayTempo"></ul>
+        </div>
+       
     </div>
+   
 
     <script src="index.js"></script>
 </body>
